# PythonProject

./: .gitignore
.claude/: settings.local.json
pyagent/: CONTRIBUTING.md  README.md  pyproject.toml
pyagent/.github/workflows/: ci.yml
pyagent/docs/: UI_ENHANCEMENT_PLAN.md
pyagent/examples/: basic_agent.py  mcp_client_demo.py  skills_demo.py  zhipu_demo.py
pyagent/examples/skill_demo/: SKILL.md
pyagent/src/pyagent/: __init__.py
pyagent/src/pyagent/core/: __init__.py  agent.py  context.py  executor.py  message.py  tools.py
pyagent/src/pyagent/hooks/: __init__.py  base.py  builtin.py  context.py  executor.py  registry.py  result.py
pyagent/src/pyagent/mcp/: __init__.py  client.py  exceptions.py  server.py
pyagent/src/pyagent/mcp/transport/: __init__.py  sse.py  stdio.py
pyagent/src/pyagent/mcp/types/: __init__.py
pyagent/src/pyagent/memory/: __init__.py  base.py  conversation.py  episodic.py  extractor.py  manager.py  procedural.py  semantic.py
pyagent/src/pyagent/providers/: __init__.py  anthropic.py  base.py  openai.py  zhipu.py
pyagent/src/pyagent/rag/: __init__.py  base.py  chunking.py  document.py  embeddings.py  pipeline.py  reranker.py  retriever.py  vectorstore.py
pyagent/src/pyagent/skills/: __init__.py  executor.py  loader.py  registry.py  skill.py  validator.py
pyagent/src/pyagent/state/: __init__.py  checkpoint.py  redis_backend.py  serializer.py  sqlite_backend.py
pyagent/src/pyagent/ui/: __init__.py  backend.py  gradio_app.py
pyagent/src/pyagent/utils/: config.py  logging.py
pyagent/tests/: conftest.py  test_agent.py  test_hooks.py  test_mcp.py  test_memory.py  test_rag.py  test_skills.py  test_state.py
src/pyagent/rag/: __init__.py  base.py  chunking.py  document.py  embeddings.py  pipeline.py  reranker.py  retriever.py  vectorstore.py
tests/: test_rag.py
